updated at: 2019-10-21 20:19, クソガキちゃん[VRChat想定アバター/Quest対応/FBX] - 変化稲荷社 - BOOTH

--- a/VRChat/13/1260713.html
+++ b/VRChat/13/1260713.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>
-      クソガキちゃん[VRChat想定アバター/FBX] - 変化稲荷社 - BOOTH
+      クソガキちゃん[VRChat想定アバター/Quest対応/FBX] - 変化稲荷社 - BOOTH
     </title>
     <meta name="description" content=
     "アバターアップロード解説動画(注意!動画撮影時よりUnityのバージョンが変更されています) → https://www.youtube.com/watch?v=nqNmmMnv9bE 「クソガキちゃん」は活発な女の子をイメージした3Dモデルです。 ポリゴン数(三角面)▲7014~14000くらい VRChatの他にも映像制作・Vtuber・ゲーム制作など幅広く利用していただけます。そのままでも、好みに合わせて改変していただいても構いません。">
@@ -13,14 +13,14 @@
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "クソガキちゃん[VRChat想定アバター/FBX] - 変化稲荷社 - BOOTH">
+    "クソガキちゃん[VRChat想定アバター/Quest対応/FBX] - 変化稲荷社 - BOOTH">
     <meta name="twitter:description" content=
     "アバターアップロード解説動画(注意!動画撮影時よりUnityのバージョンが変更されています) → https://www.youtube.com/watch?v=nqNmmMnv9bE 「クソガキちゃん」は活発な女の子をイメージした3Dモデルです。 ポリゴン数(三角面)▲7014~14000くらい VRChatの他にも映像制作・Vtuber・ゲーム制作など幅広く利用していただけます。そのままでも、好みに合わせて改変していただいても構いません。">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/7667a7ab-8336-48fe-825d-514da9d0d34e/i/1260713/edec4af5-1916-4f3f-92f4-5906cde6b84b_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "クソガキちゃん[VRChat想定アバター/FBX] - 変化稲荷社 - BOOTH">
+    "クソガキちゃん[VRChat想定アバター/Quest対応/FBX] - 変化稲荷社 - BOOTH">
     <meta property="og:description" content=
     "アバターアップロード解説動画(注意!動画撮影時よりUnityのバージョンが変更されています) → https://www.youtube.com/watch?v=nqNmmMnv9bE 「クソガキちゃん」は活発な女の子をイメージした3Dモデルです。 ポリゴン数(三角面)▲7014~14000くらい VRChatの他にも映像制作・Vtuber・ゲーム制作など幅広く利用していただけます。そのままでも、好みに合わせて改変していただいても構いません。">
     <meta property="og:image" content=
@@ -143,7 +143,7 @@
                           </div></a>
                         </div>
                         <h2 class="item-summary__item-name">
-                          クソガキちゃん[VRChat想定アバター/FBX]
+                          クソガキちゃん[VRChat想定アバター/Quest対応/FBX]
                         </h2>
                         <div class="item-summary__caption"></div>
                       </header>
@@ -353,7 +353,7 @@
                             "https://booth.pm/ja/items/1260713"
                             data-lang="ja" data-hashtags="booth_pm"
                             data-text=
-                            "クソガキちゃん[VRChat想定アバター/FBX] | 変化稲荷社"
+                            "クソガキちゃん[VRChat想定アバター/Quest対応/FBX] | 変化稲荷社"
                             data-count="none" class=
                             "twitter-share-button" href=
                             "https://twitter.com/share">ツイート</a>
@@ -373,7 +373,8 @@
                         <div>
                           <div class=
                           "market-item-detail-item-image-wrapper">
-                            <img alt="クソガキちゃん[VRChat想定アバター/FBX]"
+                            <img alt=
+                            "クソガキちゃん[VRChat想定アバター/Quest対応/FBX]"
                             class="market-item-detail-item-image"
                             src=
                             "https://booth.pximg.net/7667a7ab-8336-48fe-825d-514da9d0d34e/i/1260713/edec4af5-1916-4f3f-92f4-5906cde6b84b_base_resized.jpg">
@@ -382,7 +383,8 @@
                         <div>
                           <div class=
                           "market-item-detail-item-image-wrapper">
-                            <img alt="クソガキちゃん[VRChat想定アバター/FBX]"
+                            <img alt=
+                            "クソガキちゃん[VRChat想定アバター/Quest対応/FBX]"
                             class="market-item-detail-item-image"
                             data-lazy=
                             "https://booth.pximg.net/7667a7ab-8336-48fe-825d-514da9d0d34e/i/1260713/3a91a511-6300-4e15-9b69-66e95396cb71_base_resized.jpg">
@@ -404,7 +406,7 @@
                         <div class=
                         "market-item-detail-description">
                           <h1 class="subhead">
-                            クソガキちゃん[VRChat想定アバター/FBX] 紹介文
+                            クソガキちゃん[VRChat想定アバター/Quest対応/FBX] 紹介文
                           </h1>
                           <p class="autolink">
                             アバターアップロード解説動画(注意!動画撮影時よりUnityのバージョンが変更されています)
