updated at: 2019-10-21 20:41, 着ぐるみ鳥子 - ギギギ無宿の枝 - BOOTH

--- a/VRChat/66/1254166.html
+++ b/VRChat/66/1254166.html
@@ -6,7 +6,7 @@
       着ぐるみ鳥子 - ギギギ無宿の枝 - BOOTH
     </title>
     <meta name="description" content=
-    "モデルデータ、テクスチャ、ユニティ設定ファイル（fbx,png,unitypackage）を含みます。 DinamicBornや表情設定済み、VRchatですぐ使えます。 まんまるシェーダー1.3を使用しています。 ポリゴン数2010。VRchatにおけるアバター評価はgoodです。 「着ぐるみの女の子の３Ｄモデルです。ゆらゆらと揺れる羽先と風をふわふわと飛んでみたいな。という気分でちょこちょこ歩きります。」 ※免責事項や規約など それぞれの国における著作権や人権などに則って使用下さい。 商業利用も改造も可です。再配布は商品なのでもちろん禁止でお願いします。">
+    "モデルデータ、テクスチャ、ユニティ設定ファイル（fbx,png,unitypackage）を含みます。 DinamicBornや表情設定済み、VRchatですぐ使えます。 まんまるシェーダー1.3を使用しています。 ポリゴン数2010。VRchatにおけるアバター評価はgood（訂正：medium）です。 「着ぐるみの女の子の３Ｄモデルです。ゆらゆらと揺れる羽先と風をふわふわと飛んでみたいな。という気分でちょこちょこ歩きります。」 ※免責事項や規約など それぞれの国における著作権や人権などに則って使用下さい。 商業利用も改造も可です。再配布は商品なのでもちろん禁止でお願いします。">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/1254166">
@@ -14,13 +14,13 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="着ぐるみ鳥子 - ギギギ無宿の枝 - BOOTH">
     <meta name="twitter:description" content=
-    "モデルデータ、テクスチャ、ユニティ設定ファイル（fbx,png,unitypackage）を含みます。 DinamicBornや表情設定済み、VRchatですぐ使えます。 まんまるシェーダー1.3を使用しています。 ポリゴン数2010。VRchatにおけるアバター評価はgoodです。 「着ぐるみの女の子の３Ｄモデルです。ゆらゆらと揺れる羽先と風をふわふわと飛んでみたいな。という気分でちょこちょこ歩きります。」 ※免責事項や規約など それぞれの国における著作権や人権などに則って使用下さい。 商業利用も改造も可です。再配布は商品なのでもちろん禁止でお願いします。">
+    "モデルデータ、テクスチャ、ユニティ設定ファイル（fbx,png,unitypackage）を含みます。 DinamicBornや表情設定済み、VRchatですぐ使えます。 まんまるシェーダー1.3を使用しています。 ポリゴン数2010。VRchatにおけるアバター評価はgood（訂正：medium）です。 「着ぐるみの女の子の３Ｄモデルです。ゆらゆらと揺れる羽先と風をふわふわと飛んでみたいな。という気分でちょこちょこ歩きります。」 ※免責事項や規約など それぞれの国における著作権や人権などに則って使用下さい。 商業利用も改造も可です。再配布は商品なのでもちろん禁止でお願いします。">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/6cb0c7b0-01b4-4d36-a3ba-4a98a916d181/i/1254166/c46f7362-f581-467c-a3ad-c9c430f244e2_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content="着ぐるみ鳥子 - ギギギ無宿の枝 - BOOTH">
     <meta property="og:description" content=
-    "モデルデータ、テクスチャ、ユニティ設定ファイル（fbx,png,unitypackage）を含みます。 DinamicBornや表情設定済み、VRchatですぐ使えます。 まんまるシェーダー1.3を使用しています。 ポリゴン数2010。VRchatにおけるアバター評価はgoodです。 「着ぐるみの女の子の３Ｄモデルです。ゆらゆらと揺れる羽先と風をふわふわと飛んでみたいな。という気分でちょこちょこ歩きります。」 ※免責事項や規約など それぞれの国における著作権や人権などに則って使用下さい。 商業利用も改造も可です。再配布は商品なのでもちろん禁止でお願いします。">
+    "モデルデータ、テクスチャ、ユニティ設定ファイル（fbx,png,unitypackage）を含みます。 DinamicBornや表情設定済み、VRchatですぐ使えます。 まんまるシェーダー1.3を使用しています。 ポリゴン数2010。VRchatにおけるアバター評価はgood（訂正：medium）です。 「着ぐるみの女の子の３Ｄモデルです。ゆらゆらと揺れる羽先と風をふわふわと飛んでみたいな。という気分でちょこちょこ歩きります。」 ※免責事項や規約など それぞれの国における著作権や人権などに則って使用下さい。 商業利用も改造も可です。再配布は商品なのでもちろん禁止でお願いします。">
     <meta property="og:image" content=
     "https://booth.pximg.net/c/620x620/6cb0c7b0-01b4-4d36-a3ba-4a98a916d181/i/1254166/c46f7362-f581-467c-a3ad-c9c430f244e2_base_resized.jpg">
     <meta property="og:url" content=
@@ -291,7 +291,7 @@
                             モデルデータ、テクスチャ、ユニティ設定ファイル（fbx,png,unitypackage）を含みます。
                             DinamicBornや表情設定済み、VRchatですぐ使えます。
                             まんまるシェーダー1.3を使用しています。
-                            ポリゴン数2010。VRchatにおけるアバター評価はgoodです。
+                            ポリゴン数2010。VRchatにおけるアバター評価はgood（訂正：medium）です。
                             「着ぐるみの女の子の３Ｄモデルです。ゆらゆらと揺れる羽先と風をふわふわと飛んでみたいな。という気分でちょこちょこ歩きります。」
                             ※免責事項や規約など それぞれの国における著作権や人権などに則って使用下さい。
                             商業利用も改造も可です。再配布は商品なのでもちろん禁止でお願いします。
