--- a/VRChat/21/1353621.html
+++ b/VRChat/21/1353621.html
@@ -78,7 +78,7 @@
         <div class="market-item-detail" data-product-brand=
         "uran235" data-product-category="127" data-product-id=
         "1353621" data-product-list="market_show"
-        data-product-price="0" data-tracking="detail_item">
+        data-product-price="1000" data-tracking="detail_item">
           <nav>
             <div class="breadcrumbs u-border-b u-border-100">
               <div class="container">
@@ -159,6 +159,9 @@
                                 <div class=
                                 "lo-grid u-align-items-center">
                                   <div class="lo-grid-cell">
+                                    <div class="variation-name">
+                                      通常版
+                                    </div>
                                     <div class=
                                     "variation-caption variation-caption--type">
                                       ダウンロード商品
@@ -194,6 +197,69 @@
                                         &nbsp;(34.8 MB)
                                       </div>
                                     </div></a>
+                                  </div>
+                                </div>
+                              </div>
+                            </div>
+                          </li>
+                          <li class="variation-item">
+                            <div class="lo-grid lo-grid-top">
+                              <div class="variation-item-summary">
+                                <div class=
+                                "lo-grid u-align-items-center">
+                                  <div class="lo-grid-cell">
+                                    <div class="variation-name">
+                                      開発支援版（通常版と中身同一）
+                                    </div>
+                                    <div class=
+                                    "variation-caption variation-caption--type">
+                                      ダウンロード商品
+                                    </div>
+                                  </div>
+                                  <div class=
+                                  "variation-price u-text-right">
+                                    ¥ 1,000
+                                  </div>
+                                </div>
+                                <div class="variation-cart">
+                                  <div class="cart-button-wrap">
+                                    <form class="button_to" method=
+                                    "post" action=
+                                    "https://uran235.booth.pm/cart?added_to_cart=true&amp;via=market">
+                                      <input type="hidden" name=
+                                      "_method" value=
+                                      "patch"><button class=
+                                      "btn add-cart full-length"
+                                      data-product-id="1353621"
+                                      data-product-price="1000"
+                                      data-product-brand="uran235"
+                                      data-product-category="127"
+                                      data-product-variant=
+                                      "2589803" data-tracking=
+                                      "add_item" data-product-list=
+                                      "from market_show via market to add_item"
+                                      type="submit"><input type=
+                                      "hidden" name=
+                                      "cart_item[variation_id]" id=
+                                      "cart_item_variation_id"
+                                      value="2589803"></button>
+                                      <div class="cmd-label">
+                                        <button class=
+                                        "btn add-cart full-length"
+                                        data-product-id="1353621"
+                                        data-product-price="1000"
+                                        data-product-brand=
+                                        "uran235"
+                                        data-product-category="127"
+                                        data-product-variant=
+                                        "2589803" data-tracking=
+                                        "add_item"
+                                        data-product-list=
+                                        "from market_show via market to add_item"
+                                        type=
+                                        "submit">カートに入れる</button>
+                                      </div>
+                                    </form>
                                   </div>
                                 </div>
                               </div>
