updated at: 2019-10-22 01:34, ゆめかわブルゾン - 黒猫洋品店 - BOOTH

--- a/VRChat/08/1334508.html
+++ b/VRChat/08/1334508.html
@@ -303,10 +303,13 @@
                             禁止事項
                             ○第三者への貸出：VRChat上でペデスタル、アバターコピーでの使用を禁止します。
                             ○配布：改造の有無を問わず、インターネットを通じて誰でもDL可能な状態にすることを禁止します。
-                            ○売買：改造の有無を問わず、第三者への売買を禁止します。 To English
-                            speaking people. This data can be
-                            remodeled, good for commercial use, do
-                            not redistribute. ■利用規約全文
+                            ○売買：改造の有無を問わず、第三者への売買を禁止します。 ※注意事項※
+                            ○当3Dモデルのデザインはイラストやキャラクターデザイン等、3D以外で使用することができます。
+                            その場合【ゆめかわブルゾン　©黒井　https://kuroinyan.booth.pm/items/1334508】とクレジットを表記して下さい。
+                            使用しているページや動画全てに表記する必要はありません、プロフィールやTwitterのヘッダーなど、わかりやすい部分に明記して下さい。
+                            To English speaking people. This data
+                            can be remodeled, good for commercial
+                            use, do not redistribute. ■利用規約全文
                             同梱のkiyaku.txtか、 オンライン利用規約のこちらを御覧ください
                             https://kuroneko-youhinten.wixsite.com/mysite/kiyaku-preview
                             ■免責事項
