--- a/VRChat/85/955885.html
+++ b/VRChat/85/955885.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>
-      【VR向けアバター】　オリジナル3Dモデル　『ケモクール』 - Dirty Burn works - BOOTH
+      【VR向けアバター】　オリジナル3Dモデル　『ケモクール』 - Burn D - BOOTH
     </title>
     <meta name="description" content=
     "----モデル説明---- 本モデルはUnityのHumanoidに対応したオリジナルモデル『ケモクール』です。 VRChatやVRM等の使用を想定しております。">
@@ -13,14 +13,14 @@
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "【VR向けアバター】　オリジナル3Dモデル　『ケモクール』 - Dirty Burn works - BOOTH">
+    "【VR向けアバター】　オリジナル3Dモデル　『ケモクール』 - Burn D - BOOTH">
     <meta name="twitter:description" content=
     "----モデル説明---- 本モデルはUnityのHumanoidに対応したオリジナルモデル『ケモクール』です。 VRChatやVRM等の使用を想定しております。">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/5af35120-073b-4d9b-a3a1-6c2fc38261dd/i/955885/5bfd2f06-8195-42f7-8ac9-f54552cd1c96_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "【VR向けアバター】　オリジナル3Dモデル　『ケモクール』 - Dirty Burn works - BOOTH">
+    "【VR向けアバター】　オリジナル3Dモデル　『ケモクール』 - Burn D - BOOTH">
     <meta property="og:description" content=
     "----モデル説明---- 本モデルはUnityのHumanoidに対応したオリジナルモデル『ケモクール』です。 VRChatやVRM等の使用を想定しております。">
     <meta property="og:image" content=
@@ -133,12 +133,12 @@
                           href="https://dk741.booth.pm/">
                           <div class=
                           "u-d-flex u-align-items-center">
-                            <img alt="Dirty Burn works" class=
+                            <img alt="Burn D" class=
                             "user-avatar at-item-summary" src=
                             "https://booth.pximg.net/c/48x48/users/659191/icon_image/ea88f63d-5f03-4594-a0f6-de0295b99fc0_base_resized.jpg">
                             <div class=
                             "flex-order-summary-shop_name">
-                              Dirty Burn works
+                              Burn D
                             </div>
                           </div></a>
                         </div>
@@ -235,7 +235,7 @@
                             "https://booth.pm/ja/items/955885"
                             data-lang="ja" data-hashtags="booth_pm"
                             data-text=
-                            "【VR向けアバター】　オリジナル3Dモデル　『ケモクール』 | Dirty Burn works"
+                            "【VR向けアバター】　オリジナル3Dモデル　『ケモクール』 | Burn D"
                             data-count="none" class=
                             "twitter-share-button" href=
                             "https://twitter.com/share">ツイート</a>
