--- a/VRChat/68/1140468.html
+++ b/VRChat/68/1140468.html
@@ -427,22 +427,22 @@
                             "click" data-product-list=
                             "from market_show via tag_list to search_index"
                             href=
-                            "https://booth.pm/ja/search/3D%E3%83%A2%E3%83%87%E3%83%AB%20%E5%B0%8F%E7%89%A9">
+                            "https://booth.pm/ja/search/3D%E7%94%A8%E3%82%AA%E3%83%96%E3%82%B8%E3%82%A7%E3%82%AF%E3%83%88">
                             <div class="search-guide-tablet-label">
                               <div class=
                               "search-guide-tablet-label-inner">
-                                3Dモデル 小物
+                                3D用オブジェクト
                               </div>
                             </div></a><a class=
                             "search-guide-tablet" data-tracking=
                             "click" data-product-list=
                             "from market_show via tag_list to search_index"
                             href=
-                            "https://booth.pm/ja/search/3D%E3%82%A8%E3%83%95%E3%82%A7%E3%82%AF%E3%83%88">
+                            "https://booth.pm/ja/search/3D%E7%94%A8%E3%82%A8%E3%83%95%E3%82%A7%E3%82%AF%E3%83%88">
                             <div class="search-guide-tablet-label">
                               <div class=
                               "search-guide-tablet-label-inner">
-                                3Dエフェクト
+                                3D用エフェクト
                               </div>
                             </div></a>
                           </div>
