updated at: 2019-10-22 18:04, 3Dオリジナルモデル - アングラの子 - 電脳屋(NEKOMI). - BOOTH

--- a/VRChat/46/1314546.html
+++ b/VRChat/46/1314546.html
@@ -529,7 +529,8 @@
                             ・6/25：プロポーションの微調整、ボーン構成の一部変更、胸の調整
                             ・7/23:肌マテリアルの一部が別のマテリアルになっていた箇所の修正
                             ・8/10:アニメーションが合わさった際に破綻してしまうアニメーションの修正。
-                            ・10/6:大部分のテクスチャを描き直しました。ボディーを作り直しました。顔を若干修正しました。Blender2.8でも通常通りに編集可能に成りました。ローポリ版の際に構想していたイメージに寄り近づけたモデルになっています。
+                            ・10/6:V.2.0アップデート大部分のテクスチャを描き直しました。ボディーを作り直しました。顔を若干修正しました。Blender2.8でも通常通りに編集可能に成りました。ローポリ版の際に構想していたイメージに寄り近づけたモデルになっています。
+                            ・10/22:アングラの子2.0.1：角のシェイプキーが壊れていたので修正しました。地の髪のアウトラインが大幅にずれていたのでアウトラインを削除しました。
                             Unityがある程度利用できる事、GIMP、クリスタ等のペイントソフトがある程度使える事が前提に成っています。購入後の返金対応は出来ませんのでご注意ください。
                           </p>
                         </div>
