updated at: 2019-10-22 18:32, 新元号【令和】 - sinpoko&#39;s Warehouse - BOOTH

--- a/VRChat/19/1299519.html
+++ b/VRChat/19/1299519.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>
-      新元号【令和】 - sinpokoの部屋 - BOOTH
+      新元号【令和】 - sinpoko's Warehouse - BOOTH
     </title>
     <meta name="description" content=
     "新元号おめでとうございます。 動画やVRCでの利用を想定した元号を作成いたしました。 初心者の練習を兼ねているのでお目汚しかと思いますがご利用いただければと思います。">
@@ -13,14 +13,14 @@
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "新元号【令和】 - sinpokoの部屋 - BOOTH">
+    "新元号【令和】 - sinpoko's Warehouse - BOOTH">
     <meta name="twitter:description" content=
     "新元号おめでとうございます。 動画やVRCでの利用を想定した元号を作成いたしました。 初心者の練習を兼ねているのでお目汚しかと思いますがご利用いただければと思います。">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/5c52d750-a1d5-4d71-a6a2-f9c428883650/i/1299519/7256960e-9d9a-45d3-97a7-7fc8d1e24ca4_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "新元号【令和】 - sinpokoの部屋 - BOOTH">
+    "新元号【令和】 - sinpoko's Warehouse - BOOTH">
     <meta property="og:description" content=
     "新元号おめでとうございます。 動画やVRCでの利用を想定した元号を作成いたしました。 初心者の練習を兼ねているのでお目汚しかと思いますがご利用いただければと思います。">
     <meta property="og:image" content=
@@ -121,12 +121,12 @@
                           href="https://sinpoko.booth.pm/">
                           <div class=
                           "u-d-flex u-align-items-center">
-                            <img alt="sinpokoの部屋" class=
+                            <img alt="sinpoko's Warehouse " class=
                             "user-avatar at-item-summary" src=
                             "https://asset.booth.pm/assets/thumbnail_placeholder_f_150x150-111239104af306673a8ca0b4b0976bf244ba9d43195456673ea7e27c6dcdb36c.png">
                             <div class=
                             "flex-order-summary-shop_name">
-                              sinpokoの部屋
+                              sinpoko's Warehouse
                             </div>
                           </div></a>
                         </div>
@@ -207,7 +207,8 @@
                             <a data-url=
                             "https://booth.pm/ja/items/1299519"
                             data-lang="ja" data-hashtags="booth_pm"
-                            data-text="新元号【令和】 | sinpokoの部屋"
+                            data-text=
+                            "新元号【令和】 | sinpoko's Warehouse"
                             data-count="none" class=
                             "twitter-share-button" href=
                             "https://twitter.com/share">ツイート</a>
