--- a/VRChat/82/1264882.html
+++ b/VRChat/82/1264882.html
@@ -6,7 +6,7 @@
       オリジナル３Dモデル　Ewlis(ユーリス) - 河童の水源 - BOOTH
     </title>
     <meta name="description" content=
-    "EwlisはunityのHumanoid形式対応のオリジナル３Dキャラクターです。 VRChatでの使用を想定しております。エルフ耳のおてんば娘です。 ご購入前に下記利用規約等を読んだうえでの購入をお願いします。 更新履歴 190314　v1.11　PrefabがGenericだった為Humanoidに修正 190313　v1.1　腰トラがない場合の胸のウェイト不具合の修正。 八重歯が外すぎたので内側にもう一つ八重歯2を追加しました。 190308　v1.0　販売開始　フルトラのみ対応　腰トラがない場合胸のウェイトに不具合があることを確認済み ○　利用規約">
+    "EwlisはunityのHumanoid形式対応のオリジナル３Dキャラクターです。 VRChatでの使用を想定しております。エルフ耳のおてんば娘です。 ご購入前に下記利用規約等を読んだうえでの購入をお願いします。 更新履歴 190314　v1.11　PrefabがGenericだった為Humanoidに修正 190313　v1.1　腰トラがない場合の胸のウェイト不具合の修正。 八重歯が外すぎたので内側にもう一つ八重歯2を追加しました。 190308　v1.0　販売開始　フルトラのみ対応　腰トラがない場合胸のウェイトに不具合があることを確認済み 2019 10/23　現在 ○　利用規約">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/1264882">
@@ -15,14 +15,14 @@
     <meta name="twitter:title" content=
     "オリジナル３Dモデル　Ewlis(ユーリス) - 河童の水源 - BOOTH">
     <meta name="twitter:description" content=
-    "EwlisはunityのHumanoid形式対応のオリジナル３Dキャラクターです。 VRChatでの使用を想定しております。エルフ耳のおてんば娘です。 ご購入前に下記利用規約等を読んだうえでの購入をお願いします。 更新履歴 190314　v1.11　PrefabがGenericだった為Humanoidに修正 190313　v1.1　腰トラがない場合の胸のウェイト不具合の修正。 八重歯が外すぎたので内側にもう一つ八重歯2を追加しました。 190308　v1.0　販売開始　フルトラのみ対応　腰トラがない場合胸のウェイトに不具合があることを確認済み ○　利用規約">
+    "EwlisはunityのHumanoid形式対応のオリジナル３Dキャラクターです。 VRChatでの使用を想定しております。エルフ耳のおてんば娘です。 ご購入前に下記利用規約等を読んだうえでの購入をお願いします。 更新履歴 190314　v1.11　PrefabがGenericだった為Humanoidに修正 190313　v1.1　腰トラがない場合の胸のウェイト不具合の修正。 八重歯が外すぎたので内側にもう一つ八重歯2を追加しました。 190308　v1.0　販売開始　フルトラのみ対応　腰トラがない場合胸のウェイトに不具合があることを確認済み 2019 10/23　現在 ○　利用規約">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/1199f389-bdb8-48af-966b-ac05340502ea/i/1264882/29f8bd24-8d28-4921-a700-74e8a73a6989_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
     "オリジナル３Dモデル　Ewlis(ユーリス) - 河童の水源 - BOOTH">
     <meta property="og:description" content=
-    "EwlisはunityのHumanoid形式対応のオリジナル３Dキャラクターです。 VRChatでの使用を想定しております。エルフ耳のおてんば娘です。 ご購入前に下記利用規約等を読んだうえでの購入をお願いします。 更新履歴 190314　v1.11　PrefabがGenericだった為Humanoidに修正 190313　v1.1　腰トラがない場合の胸のウェイト不具合の修正。 八重歯が外すぎたので内側にもう一つ八重歯2を追加しました。 190308　v1.0　販売開始　フルトラのみ対応　腰トラがない場合胸のウェイトに不具合があることを確認済み ○　利用規約">
+    "EwlisはunityのHumanoid形式対応のオリジナル３Dキャラクターです。 VRChatでの使用を想定しております。エルフ耳のおてんば娘です。 ご購入前に下記利用規約等を読んだうえでの購入をお願いします。 更新履歴 190314　v1.11　PrefabがGenericだった為Humanoidに修正 190313　v1.1　腰トラがない場合の胸のウェイト不具合の修正。 八重歯が外すぎたので内側にもう一つ八重歯2を追加しました。 190308　v1.0　販売開始　フルトラのみ対応　腰トラがない場合胸のウェイトに不具合があることを確認済み 2019 10/23　現在 ○　利用規約">
     <meta property="og:image" content=
     "https://booth.pximg.net/c/620x620/1199f389-bdb8-48af-966b-ac05340502ea/i/1264882/29f8bd24-8d28-4921-a700-74e8a73a6989_base_resized.jpg">
     <meta property="og:url" content=
@@ -311,17 +311,19 @@
                             190313　v1.1　腰トラがない場合の胸のウェイト不具合の修正。
                             八重歯が外すぎたので内側にもう一つ八重歯2を追加しました。
                             190308　v1.0　販売開始　フルトラのみ対応　腰トラがない場合胸のウェイトに不具合があることを確認済み
-                            ○　利用規約
+                            2019 10/23　現在 ○　利用規約
                             　　・本モデルデータをご利用された場合には、利用規約にご同意いただいたものとみなされます。
                             　　・また、本規約は予告なく変更される場合があります。
                             　　・本モデルを使用することで発生した問題・損失等があっても販売元は一切責任を負いません。
                             　　・購入され、ダウンロードされたすべての再配布を禁止します。
+                            　　・ご購入者様以外が購入物を所有できる形での作品の販売は許可された場合を除き禁止します。必ず先に連絡をお願いいたします。
                             　　・本モデルを使った宗教活動、及びキャラクターイメージを著しく損なう行為を禁止します。
                             　　・その他、製作者が不適切と考える形での利用を禁止します。
                             ○　許可されたもの
                             　　・VRChatへのアップロード、ただしプライベートアバターに限られます　ペデスタル・パブリックアバターに設定することは禁止します。
-                            　　・改変　基本自由ですがすみわけ、ゾーニングが推奨です
+                            　　・改変　基本自由です
                             　　・二次創作、ただしその二次創作にてお金のやり取りが発生する場合は必ず製作者に許可を取ってください。
+                            　　・動画への映り込み、商用利用は可能です
                             　　・常識の範囲内でお楽しみください。 内容物 アニメーションフォルダ
                             FBXモデルデータ テクスチャ（4枚） Blenderデータ
                             Prefabデータ read me
