updated at: 2019-10-22 23:24, 3Dモデル AR-15 Standard kit[Ver.3] - 麻婆弾ストア - BOOTH

--- a/VRChat/43/1361743.html
+++ b/VRChat/43/1361743.html
@@ -478,6 +478,8 @@
                             /アドオンパック02を追加しました。
                             /幾つかのオブジェクトを結合しやや軽量化を行いました。 2019/5/31
                             ・ver3更新内容。 /アドオンパック03を追加しました。
+                            2019/10/22：テクスチャの同梱ミスを修正しました。
+                            AR-15_texpack.unitypackageを追加インポートして下さい。
                           </p>
                         </div>
                       </section>
