updated at: 2019-10-23 01:34, ファンタジー風狐娘　リュセットちゃん - かみゆコウのハコ庭 - BOOTH

--- a/VRChat/01/1326301.html
+++ b/VRChat/01/1326301.html
@@ -175,8 +175,8 @@
                                   <div class="cart-button-wrap">
                                     <a class=
                                     "btn add-cart full-length"
-                                    title="LuccetteV1.0.zip" href=
-                                    "https://booth.pm/downloadables/556304">
+                                    title="LuccetteV1.0.1.zip"
+                                    href="https://booth.pm/downloadables/760732">
                                     <div class="u-d-block">
                                       <span class=
                                       "cmd-label">無料ダウンロード</span>
@@ -185,7 +185,7 @@
                                     "u-d-flex u-flex-wrap u-justify-content-center u-tpg-caption1 u-fw-normal">
                                       <div class=
                                       "u-text-ellipsis u-max-w-50">
-                                        LuccetteV1.0
+                                        LuccetteV1.0.1
                                       </div>
                                       <div>
                                         .zip
@@ -296,7 +296,11 @@
                             予めご了承ください。 その他不明点は製作者にお問い合わせください。
                             (TwitterのDMおよびVRChat内で対応可能です。返答には時間がかかる場合があります。)
                             【更新履歴】 ●19/4/21
-                            リュセット通常版(V2.1.8)とリュセットLP(V1.3)配布開始
+                            リュセット通常版(V2.1.8)とリュセットLP(V1.4)配布開始
+                            ●19/10/22
+                            リュセット通常版(V2.1.9)およびリュセットLP(V1.4)更新
+                            　・VRChatのIK変更に伴うフルトラ不具合の対応
+                            　・Quest用アバターのShader制限に対応するためのShader変更(微小すぎる変更のためバージョン更新なし)
                           </p>
                         </div>
                       </section>
