--- a/VRChat/25/1274325.html
+++ b/VRChat/25/1274325.html
@@ -229,7 +229,7 @@
                                 "lo-grid u-align-items-center">
                                   <div class="lo-grid-cell">
                                     <div class="variation-name">
-                                      ご支援版
+                                      特典版
                                     </div>
                                     <div class=
                                     "variation-caption variation-caption--type">
