updated at: 2019-10-23 02:46, チャイナワンピース・シアン｜#VRoid - YUINOE STORE - BOOTH

--- a/VRChat/61/1293861.html
+++ b/VRChat/61/1293861.html
@@ -166,7 +166,7 @@
                                 "lo-grid u-align-items-center">
                                   <div class="lo-grid-cell">
                                     <div class="variation-name">
-                                      通常版／シアン
+                                      通常版
                                     </div>
                                     <div class=
                                     "variation-caption variation-caption--type">
@@ -229,7 +229,7 @@
                                 "lo-grid u-align-items-center">
                                   <div class="lo-grid-cell">
                                     <div class="variation-name">
-                                      特典版／シアン
+                                      特典版
                                     </div>
                                     <div class=
                                     "variation-caption variation-caption--type">
@@ -334,7 +334,7 @@
                             <img alt="チャイナワンピース・シアン｜#VRoid" class=
                             "market-item-detail-item-image"
                             data-lazy=
-                            "https://booth.pximg.net/58c3a4b7-3cf8-4d35-b645-655d8f4315aa/i/1293861/e725d815-85d3-4ce2-a06f-68ed696ad7b8_base_resized.jpg">
+                            "https://booth.pximg.net/58c3a4b7-3cf8-4d35-b645-655d8f4315aa/i/1293861/4ea58d23-4db5-4c30-8dc1-129378a51fe8_base_resized.jpg">
                           </div>
                         </div>
                         <div>
@@ -343,7 +343,7 @@
                             <img alt="チャイナワンピース・シアン｜#VRoid" class=
                             "market-item-detail-item-image"
                             data-lazy=
-                            "https://booth.pximg.net/58c3a4b7-3cf8-4d35-b645-655d8f4315aa/i/1293861/4ea58d23-4db5-4c30-8dc1-129378a51fe8_base_resized.jpg">
+                            "https://booth.pximg.net/58c3a4b7-3cf8-4d35-b645-655d8f4315aa/i/1293861/e725d815-85d3-4ce2-a06f-68ed696ad7b8_base_resized.jpg">
                           </div>
                         </div>
                         <div>
@@ -377,11 +377,11 @@
                         </div></a><a class="pointer">
                         <div class="slick-thumbnail-border">
                           <img src=
-                          "https://booth.pximg.net/c/72x72_a2_g5/58c3a4b7-3cf8-4d35-b645-655d8f4315aa/i/1293861/e725d815-85d3-4ce2-a06f-68ed696ad7b8_base_resized.jpg">
+                          "https://booth.pximg.net/c/72x72_a2_g5/58c3a4b7-3cf8-4d35-b645-655d8f4315aa/i/1293861/4ea58d23-4db5-4c30-8dc1-129378a51fe8_base_resized.jpg">
                         </div></a><a class="pointer">
                         <div class="slick-thumbnail-border">
                           <img src=
-                          "https://booth.pximg.net/c/72x72_a2_g5/58c3a4b7-3cf8-4d35-b645-655d8f4315aa/i/1293861/4ea58d23-4db5-4c30-8dc1-129378a51fe8_base_resized.jpg">
+                          "https://booth.pximg.net/c/72x72_a2_g5/58c3a4b7-3cf8-4d35-b645-655d8f4315aa/i/1293861/e725d815-85d3-4ce2-a06f-68ed696ad7b8_base_resized.jpg">
                         </div></a><a class="pointer">
                         <div class="slick-thumbnail-border">
                           <img src=
