--- a/VRChat/39/1016739.html
+++ b/VRChat/39/1016739.html
@@ -6,7 +6,7 @@
       VRCDeveloperTool - がとーしょこらのおみせ @gatosyocora - BOOTH
     </title>
     <meta name="description" content=
-    "主にVRChat開発などUnityでの開発で役に立ちそうなEditor拡張の詰め合わせです。(今後増えていく予定)">
+    "主にVRChat開発などUnityでの開発で役に立ちそうなEditor拡張の詰め合わせです。(今後増えていく予定) この詰め合わせに含まれる特にアバターの基本的な設定をおこなうツールはこちらでパッケージ化しています https://booth.pm/ja/items/1258744">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/1016739">
@@ -15,14 +15,14 @@
     <meta name="twitter:title" content=
     "VRCDeveloperTool - がとーしょこらのおみせ @gatosyocora - BOOTH">
     <meta name="twitter:description" content=
-    "主にVRChat開発などUnityでの開発で役に立ちそうなEditor拡張の詰め合わせです。(今後増えていく予定)">
+    "主にVRChat開発などUnityでの開発で役に立ちそうなEditor拡張の詰め合わせです。(今後増えていく予定) この詰め合わせに含まれる特にアバターの基本的な設定をおこなうツールはこちらでパッケージ化しています https://booth.pm/ja/items/1258744">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/5daaaeb1-43fa-4c89-8da3-e7e44093dddb/i/1016739/622ac638-57a1-40df-945b-b56a4ec17b82_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
     "VRCDeveloperTool - がとーしょこらのおみせ @gatosyocora - BOOTH">
     <meta property="og:description" content=
-    "主にVRChat開発などUnityでの開発で役に立ちそうなEditor拡張の詰め合わせです。(今後増えていく予定)">
+    "主にVRChat開発などUnityでの開発で役に立ちそうなEditor拡張の詰め合わせです。(今後増えていく予定) この詰め合わせに含まれる特にアバターの基本的な設定をおこなうツールはこちらでパッケージ化しています https://booth.pm/ja/items/1258744">
     <meta property="og:image" content=
     "https://booth.pximg.net/c/620x620/5daaaeb1-43fa-4c89-8da3-e7e44093dddb/i/1016739/622ac638-57a1-40df-945b-b56a4ec17b82_base_resized.jpg">
     <meta property="og:url" content=
@@ -431,11 +431,10 @@
                       <section>
                         <div class=
                         "market-item-detail-description">
-                          <h1 class="subhead">
-                            VRCDeveloperTool 紹介文
-                          </h1>
                           <p class="autolink">
                             主にVRChat開発などUnityでの開発で役に立ちそうなEditor拡張の詰め合わせです。(今後増えていく予定)
+                            この詰め合わせに含まれる特にアバターの基本的な設定をおこなうツールはこちらでパッケージ化しています
+                            https://booth.pm/ja/items/1258744
                           </p>
                         </div>
                       </section>
