updated at: 2019-10-23 18:49, VRChat向け3Dモデル「白神鈴」 - 白星Vトリエ - BOOTH

--- a/VRChat/19/1323719.html
+++ b/VRChat/19/1323719.html
@@ -292,6 +292,15 @@
                             <img alt="VRChat向け3Dモデル「白神鈴」" class=
                             "market-item-detail-item-image"
                             data-lazy=
+                            "https://booth.pximg.net/53a255d6-2b15-47c4-b89d-927a3c9564c4/i/1323719/2eab88c2-ea3f-4486-b2ee-15e93ba554a6_base_resized.jpg">
+                          </div>
+                        </div>
+                        <div>
+                          <div class=
+                          "market-item-detail-item-image-wrapper">
+                            <img alt="VRChat向け3Dモデル「白神鈴」" class=
+                            "market-item-detail-item-image"
+                            data-lazy=
                             "https://booth.pximg.net/53a255d6-2b15-47c4-b89d-927a3c9564c4/i/1323719/a6b58ebe-fada-4342-a53f-4eccf4e4a85d_base_resized.jpg">
                           </div>
                         </div>
@@ -320,15 +329,16 @@
                         </div></a><a class="pointer">
                         <div class="slick-thumbnail-border">
                           <img src=
+                          "https://booth.pximg.net/c/72x72_a2_g5/53a255d6-2b15-47c4-b89d-927a3c9564c4/i/1323719/2eab88c2-ea3f-4486-b2ee-15e93ba554a6_base_resized.jpg">
+                        </div></a><a class="pointer">
+                        <div class="slick-thumbnail-border">
+                          <img src=
                           "https://booth.pximg.net/c/72x72_a2_g5/53a255d6-2b15-47c4-b89d-927a3c9564c4/i/1323719/a6b58ebe-fada-4342-a53f-4eccf4e4a85d_base_resized.jpg">
                         </div></a>
                       </div>
                       <section>
                         <div class=
                         "market-item-detail-description">
-                          <h1 class="subhead">
-                            VRChat向け3Dモデル「白神鈴」 紹介文
-                          </h1>
                           <p class="autolink">
                             VRChat向けオリジナル３Dモデル「白神鈴」
                             制作者：YUU_0w0（白星Vトリエ）
