updated at: 2019-10-23 20:02, けもみみ付きミニリュック - ネムタインストア - BOOTH

--- a/VRChat/26/1293226.html
+++ b/VRChat/26/1293226.html
@@ -27,6 +27,7 @@
     "https://booth.pximg.net/c/620x620/c8f8ce29-be10-40e7-82c9-fcbcecf53a46/i/1293226/424be019-6b50-42a7-aec9-a5a05508dc02_base_resized.jpg">
     <meta property="og:url" content=
     "https://booth.pm/ja/items/1293226">
+    <meta name="ga:shop" content="UA-150755370-1">
     <meta name="skip_auto_login" content="">
     <meta name="ga_dimension1" content="customer">
     <meta name="ga_dimension2" content="no">
@@ -298,9 +299,6 @@
                       <section>
                         <div class=
                         "market-item-detail-description">
-                          <h1 class="subhead">
-                            けもみみ付きミニリュック 紹介文
-                          </h1>
                           <p class="autolink">
                             VRChatでの利用を想定した「けもみみを思わせる耳」が付いたミニリュックです。
                             また、テクスチャーデータを改造することで「リュックの背中部分など」にステッカーを貼り付けることも可能となっています。（psdファイルに配置用レイヤーがございます）
