updated at: 2019-10-23 20:55, ネームプレート付きチョーカー - ネムタインストア - BOOTH

--- a/VRChat/03/1279003.html
+++ b/VRChat/03/1279003.html
@@ -27,6 +27,7 @@
     "https://booth.pximg.net/c/620x620/c8f8ce29-be10-40e7-82c9-fcbcecf53a46/i/1279003/34b16ca4-4280-423b-aa16-8c89ae3af92c_base_resized.jpg">
     <meta property="og:url" content=
     "https://booth.pm/ja/items/1279003">
+    <meta name="ga:shop" content="UA-150755370-1">
     <meta name="skip_auto_login" content="">
     <meta name="ga_dimension1" content="customer">
     <meta name="ga_dimension2" content="no">
@@ -285,9 +286,6 @@
                       <section>
                         <div class=
                         "market-item-detail-description">
-                          <h1 class="subhead">
-                            ネームプレート付きチョーカー 紹介文
-                          </h1>
                           <p class="autolink">
                             VRChatでの利用を想定した、ネームプレート付きのチョーカー（首輪）です。
                             名前を入れられるので、写真に映ったとき印象に残りやすかったり、製品に愛着がわきやすかったりするかと思います。
