updated at: 2019-10-24 01:15, 【販売停止中・オリジナル3Dモデル】クロモリー - ネムタインストア - BOOTH

--- a/VRChat/56/1191656.html
+++ b/VRChat/56/1191656.html
@@ -27,6 +27,7 @@
     "https://booth.pximg.net/c/620x620/c8f8ce29-be10-40e7-82c9-fcbcecf53a46/i/1191656/9403409d-2852-4ca0-a8e5-b2b62c723335_base_resized.jpg">
     <meta property="og:url" content=
     "https://booth.pm/ja/items/1191656">
+    <meta name="ga:shop" content="UA-150755370-1">
     <meta name="skip_auto_login" content="">
     <meta name="ga_dimension1" content="customer">
     <meta name="ga_dimension2" content="no">
@@ -296,9 +297,6 @@
                       <section>
                         <div class=
                         "market-item-detail-description">
-                          <h1 class="subhead">
-                            【販売停止中・オリジナル3Dモデル】クロモリー 紹介文
-                          </h1>
                           <p class="autolink">
                             VRChatでの利用を想定した、期間限定販売のオリジナル3Dモデルです。
                             下記の点が特徴となっている、導入と改造を楽しめるモデルです。
