--- a/VRChat/45/1137145.html
+++ b/VRChat/45/1137145.html
@@ -78,10 +78,10 @@
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <div class="page-wrap">
       <main role="main">
-        <div class="market-item-detail" data-product-brand="ckep"
-        data-product-category="134" data-product-id="1137145"
-        data-product-list="market_show" data-product-price="100"
-        data-tracking="detail_item">
+        <div class="market-item-detail u-bg-white"
+        data-product-brand="ckep" data-product-category="134"
+        data-product-id="1137145" data-product-list="market_show"
+        data-product-price="100" data-tracking="detail_item">
           <nav>
             <div class="breadcrumbs u-border-b u-border-100">
               <div class="container">
@@ -105,17 +105,17 @@
             </div>
           </nav>
           <article>
-            <div class="market-item-detail-article">
+            <div class=
+            "market-item-detail-article u-d-flex u-flex-column u-align-items-center u-pb-600 u-bg-white">
               <div class=
               "market-item-detail__exhibition-banner container">
               </div>
-              <div class="market-item-detail-article__body">
+              <div class="u-bg-white u-pt-600 u-px-700">
                 <div class="container">
-                  <div class="lo-grid">
-                    <div class="flex-order-summary">
+                  <div class="u-d-flex">
+                    <div class="u-order-1 l-col-2of5 u-pl-600">
                       <header>
-                        <div class=
-                        "flex-order-summary-shop_name-field">
+                        <div class="u-my-200 u-tpg-title3">
                           <a class="nav" target="_blank"
                           data-product-list=
                           "from market_show via market_item_detail to shop_index"
@@ -126,13 +126,13 @@
                             <img alt="電脳機巧技師団 購買部" class=
                             "user-avatar at-item-summary" src=
                             "https://booth.pximg.net/c/48x48/users/32475/icon_image/5d0ac8e6-5664-4513-9a98-b01b91c94097_base_resized.jpg">
-                            <div class=
-                            "flex-order-summary-shop_name">
+                            <div class="u-text-ellipsis">
                               電脳機巧技師団 購買部
                             </div>
                           </div></a>
                         </div>
-                        <h2 class="item-summary__item-name">
+                        <h2 class=
+                        "u-text-wrap u-tpg-title1 u-mt-0 u-mb-400">
                           [Free]VRC3DShader
                         </h2>
                         <div class="item-summary__caption"></div>
@@ -269,18 +269,17 @@
                         </ul>
                       </section>
                       <section>
-                        <div class="share-btns">
-                          <div class="social-btn twitter">
-                            <a data-url=
-                            "https://booth.pm/ja/items/1137145"
-                            data-lang="ja" data-hashtags="booth_pm"
-                            data-text=
-                            "[Free]VRC3DShader | 電脳機巧技師団 購買部"
-                            data-count="none" class=
-                            "twitter-share-button" href=
-                            "https://twitter.com/share">ツイート</a>
-                          </div>
-                          <div class="social-btn facebook">
+                        <div class=
+                        "share-btns u-d-flex u-flex-1 u-align-items-center u-justify-content-start u-px-200 u-py-400">
+                          <a data-url=
+                          "https://booth.pm/ja/items/1137145"
+                          data-lang="ja" data-hashtags="booth_pm"
+                          data-text=
+                          "[Free]VRC3DShader | 電脳機巧技師団 購買部"
+                          data-count="none" class=
+                          "twitter-share-button" href=
+                          "https://twitter.com/share">ツイート</a>
+                          <div class="u-ml-300">
                             <div class="fb-like" data-action="like"
                             data-href=
                             "https://booth.pm/ja/items/1137145"
@@ -290,7 +289,7 @@
                         </div>
                       </section>
                     </div>
-                    <div class="flex-order-body">
+                    <div class="u-order-0 l-col-3of5 u-pr-500">
                       <div class="primary-image-area">
                         <div>
                           <div class=
@@ -304,8 +303,8 @@
                       <div class="primary-image-thumbnails"></div>
                       <section>
                         <div class=
-                        "market-item-detail-description">
-                          <p class="autolink">
+                        "js-market-item-detail-description">
+                          <p class="autolink u-text-wrap">
                             VRChat用に機能を追加した、3D映像用のシェーダーです。
                             動画サイトにある3D映像をVRChat内で見ることができます。
                             Over-Under方式とSide-by-Side方式両方に対応しているほか、VRChatのSyncVideoPlayerとSyncVideoStreamの両方で使えるようにするため、ガンマ補正機能と特殊なUVの計算方法をしています。
@@ -315,8 +314,7 @@
                         </div>
                       </section>
                       <section>
-                        <div class=
-                        "market-item-detail-module page_design" id=
+                        <div class="u-text-wrap page_design" id=
                         "modules"></div>
                       </section>
                     </div>
