--- a/VRChat/06/1138806.html
+++ b/VRChat/06/1138806.html
@@ -77,10 +77,11 @@
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <div class="page-wrap">
       <main role="main">
-        <div class="market-item-detail" data-product-brand=
-        "tyosokuhouse" data-product-category="127" data-product-id=
-        "1138806" data-product-list="market_show"
-        data-product-price="100" data-tracking="detail_item">
+        <div class="market-item-detail u-bg-white"
+        data-product-brand="tyosokuhouse" data-product-category=
+        "127" data-product-id="1138806" data-product-list=
+        "market_show" data-product-price="100" data-tracking=
+        "detail_item">
           <nav>
             <div class="breadcrumbs u-border-b u-border-100">
               <div class="container">
@@ -103,17 +104,17 @@
             </div>
           </nav>
           <article>
-            <div class="market-item-detail-article">
+            <div class=
+            "market-item-detail-article u-d-flex u-flex-column u-align-items-center u-pb-600 u-bg-white">
               <div class=
               "market-item-detail__exhibition-banner container">
               </div>
-              <div class="market-item-detail-article__body">
+              <div class="u-bg-white u-pt-600 u-px-700">
                 <div class="container">
-                  <div class="lo-grid">
-                    <div class="flex-order-summary">
+                  <div class="u-d-flex">
+                    <div class="u-order-1 l-col-2of5 u-pl-600">
                       <header>
-                        <div class=
-                        "flex-order-summary-shop_name-field">
+                        <div class="u-my-200 u-tpg-title3">
                           <a class="nav" target="_blank"
                           data-product-list=
                           "from market_show via market_item_detail to shop_index"
@@ -124,13 +125,13 @@
                             <img alt="月面平城京" class=
                             "user-avatar at-item-summary" src=
                             "https://booth.pximg.net/c/48x48/users/1603120/icon_image/6eca9507-6273-49c7-a7a9-0e5f27533d4a_base_resized.jpg">
-                            <div class=
-                            "flex-order-summary-shop_name">
+                            <div class="u-text-ellipsis">
                               月面平城京
                             </div>
                           </div></a>
                         </div>
-                        <h2 class="item-summary__item-name">
+                        <h2 class=
+                        "u-text-wrap u-tpg-title1 u-mt-0 u-mb-400">
                           ヘッドセット+メディス子向け機械化パーツ
                         </h2>
                         <div class="item-summary__caption"></div>
@@ -219,18 +220,16 @@
                         </ul>
                       </section>
                       <section>
-                        <div class="share-btns">
-                          <div class="social-btn twitter">
-                            <a data-url=
-                            "https://booth.pm/ja/items/1138806"
-                            data-lang="ja" data-hashtags="booth_pm"
-                            data-text=
-                            "ヘッドセット+メディス子向け機械化パーツ | 月面平城京"
-                            data-count="none" class=
-                            "twitter-share-button" href=
-                            "https://twitter.com/share">ツイート</a>
-                          </div>
-                          <div class="social-btn facebook">
+                        <div class=
+                        "share-btns u-d-flex u-flex-1 u-align-items-center u-justify-content-start u-px-200 u-py-400">
+                          <a data-url=
+                          "https://booth.pm/ja/items/1138806"
+                          data-lang="ja" data-hashtags="booth_pm"
+                          data-text="ヘッドセット+メディス子向け機械化パーツ | 月面平城京"
+                          data-count="none" class=
+                          "twitter-share-button" href=
+                          "https://twitter.com/share">ツイート</a>
+                          <div class="u-ml-300">
                             <div class="fb-like" data-action="like"
                             data-href=
                             "https://booth.pm/ja/items/1138806"
@@ -240,7 +239,7 @@
                         </div>
                       </section>
                     </div>
-                    <div class="flex-order-body">
+                    <div class="u-order-0 l-col-3of5 u-pr-500">
                       <div class="primary-image-area">
                         <div>
                           <div class=
@@ -286,8 +285,8 @@
                       </div>
                       <section>
                         <div class=
-                        "market-item-detail-description">
-                          <p class="autolink">
+                        "js-market-item-detail-description">
+                          <p class="autolink u-text-wrap">
                             ヘッドセットと機械式羽のセットです。
                             主に　https://armadillon.booth.pm/items/1130532　のアルマジロン制作メディカルセンタースタッフさん向けに仕上げたものとなっておりますが、おそらく他アバターにも運用が可能です。
                             同梱したアニメーターをChest部に追加したAnimetorコンポーネントに導入したうえで翼を非常にする。またはエモートスイッチを実装することで全表示運用が可能です。
@@ -295,8 +294,7 @@
                         </div>
                       </section>
                       <section>
-                        <div class=
-                        "market-item-detail-module page_design" id=
+                        <div class="u-text-wrap page_design" id=
                         "modules"></div>
                       </section>
                     </div>
