updated at: 2020-01-15 23:06, 3Dモデル「たわわ胸Ver.2.11 Extra」【キッシュ素体専用】 - 空々神社社務所 - BOOTH

--- a/VRChat/02/1130602.html
+++ b/VRChat/02/1130602.html
@@ -78,34 +78,30 @@
     <div class="page-wrap">
       <main role="main">
         <div id="age-confirmation">
-          <div class="layout-wrap">
-            <div class="alert-container">
-              <div class="alert-headings">
-                <h1 class="u-tpg-title1 u-m-0">
-                  年齢確認
-                </h1>
-                <h2 class="u-tpg-headline u-mt-500">
-                  ここから先は、アダルト商品を取り扱うアダルトサイトとなります。<br>
-                  18歳未満の方には不適切な表現内容（性描写・暴力的表現等）を含んでいるため、<br>
-                  18歳未満の方のアクセスは固くお断りします。
-                </h2>
-              </div>
-              <h3 class="u-tpg-headline">
-                あなたは18歳以上ですか？
-              </h3>
-              <nav>
-                <ul class="lo-grid u-justify-content-center">
-                  <li class="approve-adult">
-                    <a class="adult-check-nav" href="#">[はい]</a>
-                  </li>
-                  <li>
-                    <a class="adult-check-nav" href=
-                    "https://booth.pm/">[いいえ]</a>
-                  </li>
-                </ul>
-              </nav>
-            </div>
+          <div class="alert-headings">
+            <h1 class="u-tpg-title1 u-m-0">
+              年齢確認
+            </h1>
+            <h2 class="u-tpg-headline u-mt-500">
+              ここから先は、アダルト商品を取り扱うアダルトサイトとなります。<br>
+              18歳未満の方には不適切な表現内容（性描写・暴力的表現等）を含んでいるため、<br>
+              18歳未満の方のアクセスは固くお断りします。
+            </h2>
           </div>
+          <h3 class="u-tpg-headline">
+            あなたは18歳以上ですか？
+          </h3>
+          <nav>
+            <ul class="l-row u-m-0 u-justify-content-center">
+              <li class="js-approve-adult">
+                <a class="adult-check-nav" href="#">[はい]</a>
+              </li>
+              <li>
+                <a class="adult-check-nav" href=
+                "https://booth.pm/">[いいえ]</a>
+              </li>
+            </ul>
+          </nav>
         </div>
       </main>
     </div>
